# stuff

./: .gitignore  README.md  pyproject.toml  requirements.txt
frontend/: .env.example  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.js
frontend/src/: App.vue  main.js
frontend/src/assets/styles/: main.scss
frontend/src/components/: AppLogo.vue
frontend/src/router/: index.js
frontend/src/stores/: auth.js
frontend/src/views/: ItemTypes.vue  Items.vue  Locations.vue  Login.vue  Profile.vue  Scanner.vue  Tags.vue  Users.vue
src/: .env.example  app.py  download_images.py  init_db.py  models.py  populate_demo_data.py  recreate_db.py
tests/: conftest.py  test_app.py
