[project]
name = "stuff"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask-sqlalchemy==3.1.1",
    "flask==2.3.3",
    "pillow==10.0.0",
    "qrcode==7.4.2",
    "shortuuid==1.0.11",
    "python-dotenv==1.0.0",
    "flask-cors==4.0.0",
    "flask-jwt-extended==4.5.3",
    "werkzeug==2.3.7",
]
